Adding Views and Logic